vcs/specs/parser/fail/expressions/invalid_unary_placement.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, unary, placement, error
// @description: Unary operator in invalid position
// @expected-error: E018

fn test() {
    let x = 1 + !;  // Unary ! without operand
}
